[package]
name = "axum-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
dotenv = "0.15.0"
serde = "1.0.147"
axum = {version = "0.4.8",features = ["headers"]}
tokio = { version="1.13.0", features = ["full"] }
deadpool-postgres = "0.9"
tokio-postgres = "0.7"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"